syntax = "proto3";

service Printer {
    rpc PrintPage (PrintRequest) returns (PrintResponse);
    rpc HealthCheck (PrinterHealthCheckUpRequest) returns (PrinterHealthStatus);
}

message PrintRequest {
    uint32 copies = 1;
    string destination = 2;
    map<string, string> options = 3;
    bytes encoded_file = 4;
}

message PrintResponse {
    string message = 1;
}

message PrinterHealthCheckUpRequest {
    string member_name = 1;
}

message PrinterHealthStatus {
    string message = 1;
}
